<resources>
    <string name="app_name">My Application</string>
    <string name="FoiFoi">Foi?Foi!</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_vai_ser_de">SEU GASTO TOTAL VAI SER DE:</string>
    <string name="rs_0">R$ 0</string>
    <string name="calcular">CALCULAR</string>

    <string name="message">Preencha todos os campos</string>
</resources>